# Final_Projects

./: .gitignore
chainlit_chatbot/: README.md  chatbot.py  pyproject.toml  requirements.txt
chainlit_chatbot/src/chainlit_chatbot/: __init__.py
password_generator_master/: README.md  password_generator_master.py  pyproject.toml
password_generator_master/src/password_generator_master/: __init__.py
