[project]
name = "chainlit-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sehrish-hub", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.301",
    "geopy>=2.4.1",
    "openai-agents>=0.0.6",
    "pytz>=2025.2",
    "timezonefinder>=6.5.9",
]

[project.scripts]
chainlit-chatbot = "chainlit_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
