[project]
name = "password-generator-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sehrish-hub", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.0",
]

[project.scripts]
password-generator-master = "password_generator_master:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
